# HNReader

./: .gitignore  LICENSE  README.md  config.py  pyproject.toml  redis_backend.py  server.py
hnapi/: README.md  __init__.py
reader/: __init__.py  composer.json  reader.php
web/: .gitignore  index.html  package-lock.json  package.json  publish.sh  snowpack.config.js  urls.md  vite.config.ts
web/public/: index.html  manifest.json
web/src/: App.vue  index.ts  interfaces.ts  router.ts  utils.ts
web/src/components/: Comment.vue  Header.vue
web/src/style/: _layout.scss  _reboot.scss  _variables.scss  main.scss
web/src/views/: About.vue  Comments.vue  Reader.vue  Stories.vue
