[tool.poetry]
name = "hnreader"
version = "0.1.0"
description = ""
authors = ["Lukas Winkler <git@lw1.at>"]

[tool.poetry.dependencies]
python = "^3.9"
hiredis = "^2.0.0"
starlette = "^0.22.0"
uvicorn = "^0.19.0"
gunicorn = "^20.1.0"
uvloop = "^0.17.0"
httptools = "^0.5.0"
httpcore = "0.15.0" # https://github.com/encode/httpcore/issues/613
setproctitle = "^1.2.2"
httpx = "^0.23.0"
redis = "^4.2.0"
maxminddb = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
