[tool.poetry]
name = "hnreader"
version = "0.1.0"
description = ""
authors = ["Lukas Winkler <git@lw1.at>"]

[tool.poetry.dependencies]
python = "^3.11"
hiredis = "^2.0.0"
starlette = "^0.25.0"
uvicorn = "^0.20.0"
gunicorn = "^20.1.0"
uvloop = "^0.17.0"
httptools = "^0.5.0"
httpcore = "0.16.3"
setproctitle = "^1.2.2"
httpx = "^0.23.0"
redis = "^4.2.0"
maxminddb = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
